sticky z-index fix

--- a/resources/assets/carhouse/css/style.css
+++ b/resources/assets/carhouse/css/style.css
@@ -1469,12 +1469,9 @@ footer .footer-item .gallery-item {
     transform: translate(0, 0); /* For browsers don't support translate3d. */
     transform: translate3d(0, 0, 0);
     will-change: position, transform;
-}
-
-.inner-wrapper-sticky{
+    position: relative;
     z-index: 10;
 }
-
 
 .sidebar .search-btn{
     width: 100%;
